--- a/trabawho/views/index.ejs
+++ b/trabawho/views/index.ejs
@@ -84,6 +84,13 @@
     
     
     <div class="site-section bg-light">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
+            <h2>Service Providers</h2>
+          </div>
+        </div>
+      </div>
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-5">
@@ -315,17 +322,6 @@
         </div>
       </div>
     </div>
-
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-  
-          </div>
-          
-        </div>
-      </div>
-    </footer>
 
   </div>
 
