--- a/trabawho/views/partials/nav.ejs
+++ b/trabawho/views/partials/nav.ejs
@@ -6,25 +6,29 @@
                   <li>
                     <a href="index.html">Home</a>
                   </li>
-                  <li><a href="dj.html">DJs</a></li>
-                  <li class="has-children">
-                    <a href="#">Trending</a>
-                    <ul class="dropdown arrow-top">
-                      <li><a href="#">Top 20 of The Week</a></li>
-                      <li><a href="#">Featured Artist</a></li>
-                      <li><a href="#">Interviews</a></li>
-                      <li class="has-children">
-                        <a href="#">Sub Menu</a>
-                        <ul class="dropdown">
-                          <li><a href="#">Menu One</a></li>
-                          <li><a href="#">Menu Two</a></li>
-                          <li><a href="#">Menu Three</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+                  <li class="divider"></li>
+                  <li>
+                    <a href="#">Transaction</a>
                   </li>
-                  <li class="active"><a href="events.html">Events</a></li>
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li class="divider"></li>
+                  <li>
+                    <a href="#">History</a>
+                  </li>
+                  <li class="divider"></li>
+                  <li>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    User
+                    </a>
+                      <ul class="dropdown-menu dropdown-user">
+                        <li>
+                          <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                          <a href="logout.php"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                      </ul>
+                  </li>
+              
                 </ul>
               </nav>
