--- a/trabawho/views/index.ejs
+++ b/trabawho/views/index.ejs
@@ -24,12 +24,8 @@
 
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/modal.css">
-
   </head>
   <body>
-  
-    
-  
   <div class="site-wrap">
 
     <div class="site-navbar mt-4">
@@ -75,7 +71,7 @@
             </form>
           </div>
 
-        
+        <!--  -->
         </div>
 
         
@@ -326,8 +322,16 @@
         </div>
       </div>
     </footer>
-
   </div>
+
+  <% data.forEach(function(user){ %>
+  <%= user.user %>
+  <%= user.user_id %>
+  <%= user.service_id %>
+  <%= user.service_name %>
+  <%= user.address %>
+
+  <% }); %>
 
   <script src="/assets/js/jquery-3.3.1.min.js"></script>
   <script src="/assets/js/jquery-migrate-3.0.1.min.js"></script>
@@ -345,6 +349,5 @@
 
   <script src="/assets/js/main.js"></script>
   <script src="/assets/js/modal.js"></script>
-    
   </body>
 </html>
