--- a/trabawho/views/partials/nav.ejs
+++ b/trabawho/views/partials/nav.ejs
@@ -15,19 +15,21 @@
                     <a href="#">History</a>
                   </li>
                   <li class="divider"></li>
-                  <li>
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    User
-                    </a>
-                      <ul class="dropdown-menu dropdown-user">
-                        <li>
-                          <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                          <a href="logout.php"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                      </ul>
+                  <li class="has-children">
+                    <a href="#">User</a>
+                    <ul>
+                      <li><a href="#">Top 20 of The Week</a></li>
+                      <li><a href="#">Featured Artist</a></li>
+                      <li><a href="#">Interviews</a></li>
+                      <li class="has-children">
+                        <a href="#">Sub Menu</a>
+                        <ul class="dropdown">
+                          <li><a href="#">Menu One</a></li>
+                          <li><a href="#">Menu Two</a></li>
+                          <li><a href="#">Menu Three</a></li>
+                        </ul>
+                      </li>
+                    </ul>
                   </li>
               
                 </ul>
