--- a/trabawho/views/partials/nav.ejs
+++ b/trabawho/views/partials/nav.ejs
@@ -17,20 +17,11 @@
                   <li class="divider"></li>
                   <li class="has-children">
                     <a href="#">User</a>
-                    <ul>
-                      <li><a href="#">Top 20 of The Week</a></li>
-                      <li><a href="#">Featured Artist</a></li>
-                      <li><a href="#">Interviews</a></li>
-                      <li class="has-children">
-                        <a href="#">Sub Menu</a>
-                        <ul class="dropdown">
-                          <li><a href="#">Menu One</a></li>
-                          <li><a href="#">Menu Two</a></li>
-                          <li><a href="#">Menu Three</a></li>
-                        </ul>
-                      </li>
+                    <ul class="dropdown">
+                      <li><a href="#">Profile</a></li>
+                      <li><a href="#">Logout</a></li>
                     </ul>
                   </li>
-              
+                  <li class="divider"></li>
                 </ul>
               </nav>
