--- a/trabawho/views/modals/request.ejs
+++ b/trabawho/views/modals/request.ejs
@@ -15,36 +15,23 @@
 
 									<div class="row form-group">
 										<div class="col-md-12 mb-3 mb-md-0">
-											<label class="font-weight-bold" for="fullname">Full Name</label>
-											<input type="text" id="fullname" class="form-control" placeholder="Full Name">
+											<label class="font-weight-bold" for="fullname">Date</label>
+											<input name="date" id="date" type="date" class="form-control" required>
 										</div>
 									</div>
 									<div class="row form-group">
 										<div class="col-md-12">
-											<label class="font-weight-bold" for="email">Email</label>
-											<input type="email" id="email" class="form-control" placeholder="Email Address">
+											<label class="font-weight-bold" for="email">From</label>
+											<input name="from" id="time" type="time" class="form-control" required>
 										</div>
 									</div>
 									<div class="row form-group">
 										<div class="col-md-12">
-											<label class="font-weight-bold" for="email">Subject</label>
-											<input type="text" id="subject" class="form-control" placeholder="Enter Subject">
+											<label class="font-weight-bold" for="email">To</label>
+											<input name="to" id="time" type="time" class="form-control" required>
 										</div>
 									</div>
 									
-
-									<div class="row form-group">
-										<div class="col-md-12">
-											<label class="font-weight-bold" for="message">Message</label> 
-											<textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Say hello to us"></textarea>
-										</div>
-									</div>
-
-									<div class="row form-group">
-										<div class="col-md-12">
-											<input type="submit" value="Send" class="btn btn-primary  py-2 px-4 rounded-0">
-										</div>
-									</div>
 								</form>
 							</div>
 
@@ -61,18 +48,12 @@
 									<p class="mb-0"><a href="#">youremail@domain.com</a></p>
 
 								</div>
-								
-								<div class="p-4 mb-3 bg-white">
-									<h3 class="h5 text-black mb-3">More Info</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa ad iure porro mollitia architecto hic consequuntur. Distinctio nisi perferendis dolore, ipsa consectetur</p>
-									<p><a href="#" class="btn btn-primary  py-2 px-4 rounded-0">Learn More</a></p>
-								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="modal-footer">Famae</div>
+			<div class="modal-footer"></div>
 
 		</div>
 	</div>
