--- a/trabawho/views/partials/nav.ejs
+++ b/trabawho/views/partials/nav.ejs
@@ -4,21 +4,21 @@
 
                 <ul class="site-menu js-clone-nav d-none d-lg-block">
                   <li>
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                   </li>
                   <li class="divider"></li>
                   <li>
-                    <a href="#">Transaction</a>
+                    <a href="/client/transactions">Transaction</a>
                   </li>
                   <li class="divider"></li>
                   <li>
-                    <a href="#">History</a>
+                    <a href="/client/history">History</a>
                   </li>
                   <li class="divider"></li>
                   <li class="has-children">
                     <a href="#">User</a>
                     <ul class="dropdown">
-                      <li><a href="#">Profile</a></li>
+                      <li><a href="/viewprofile">Profile</a></li>
                       <li><a href="#">Logout</a></li>
                     </ul>
                   </li>
