--- a/trabawho/views/index.ejs
+++ b/trabawho/views/index.ejs
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/modal.css">
+  <script src="/assets/js/jquery-3.3.1.min.js"></script>
+
 </head>
 <body>
   <div class="site-wrap">
@@ -135,7 +137,7 @@
 
 
 
-<script src="/assets/js/jquery-3.3.1.min.js"></script>
+
 <script src="/assets/js/jquery-migrate-3.0.1.min.js"></script>
 <script src="/assets/js/jquery-ui.js"></script>
 <script src="/assets/js/popper.min.js"></script>
@@ -151,5 +153,6 @@
 
 <script src="/assets/js/main.js"></script>
 <script src="/assets/js/modal.js"></script>
+<script src="/assets/js/custom.js"></script>
 </body>
 </html>
