--- a/trabawho/views/modals/request.ejs
+++ b/trabawho/views/modals/request.ejs
@@ -6,52 +6,11 @@
 			<div class="modal-header">
 			</div>
 			<div class="modal-body">
-				<div class="site-section bg-light">
-					<div class="container">
-						<div class="row">
-							
-							<div class="col-md-12 col-lg-8 mb-5">
-								<form action="#" class="p-5 bg-white">
-
-									<div class="row form-group">
-										<div class="col-md-12 mb-3 mb-md-0">
-											<label class="font-weight-bold" for="fullname">Date</label>
-											<input name="date" id="date" type="date" class="form-control" required>
-										</div>
-									</div>
-									<div class="row form-group">
-										<div class="col-md-12">
-											<label class="font-weight-bold" for="email">From</label>
-											<input name="from" id="time" type="time" class="form-control" required>
-										</div>
-									</div>
-									<div class="row form-group">
-										<div class="col-md-12">
-											<label class="font-weight-bold" for="email">To</label>
-											<input name="to" id="time" type="time" class="form-control" required>
-										</div>
-									</div>
-									
-								</form>
-							</div>
-
-							<div class="col-lg-4">
-								<div class="p-4 mb-3 bg-white">
-									<h3 class="h5 text-black mb-3">Contact Info</h3>
-									<p class="mb-0 font-weight-bold">Address</p>
-									<p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
-
-									<p class="mb-0 font-weight-bold">Phone</p>
-									<p class="mb-4"><a href="#">+1 232 3235 324</a></p>
-
-									<p class="mb-0 font-weight-bold">Email Address</p>
-									<p class="mb-0"><a href="#">youremail@domain.com</a></p>
-
-								</div>
-							</div>
-						</div>
-					</div>
+				
+				<div class="row">
+					<%- include('forms/requestform.ejs'); %>
 				</div>
+				
 			</div>
 			<div class="modal-footer"></div>
 
