--- a/trabawho/views/partials/nav.ejs
+++ b/trabawho/views/partials/nav.ejs
@@ -8,11 +8,11 @@
                   </li>
                   <li class="divider"></li>
                   <li>
-                    <a href="/client/transactions">Transaction</a>
+                    <a href="/transactions">Transaction</a>
                   </li>
                   <li class="divider"></li>
                   <li>
-                    <a href="/client/history">History</a>
+                    <a href="/history">History</a>
                   </li>
                   <li class="divider"></li>
                   <li class="has-children">
