--- a/trabawho/views/forms/requestform.ejs
+++ b/trabawho/views/forms/requestform.ejs
@@ -3,58 +3,47 @@
 <form id="regForm" action="" class="p-5 bg-white">
 
   <div class="tab">
-  <h1>What <span id='sname'></span> services do you need?</h1>
-  <div id='workitems'>
-    
-</div>
-  </div>
+    <h1>What <span id='sname'></span> services do you need?</h1>
+    <div id='workitems'>
 
-  <div class="tab">Contact Info:
-    <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
-    <p><input placeholder="Phone..." oninput="this.className = ''"></p>
-  </div>
-
-  <div class="tab">When:<div class="row form-group">
-    <div class="col-md-12 mb-3 mb-md-0">
-      <label class="font-weight-bold" for="fullname">Date</label>
-      <input name="date" id="date" type="date" class="form-control" required>
     </div>
   </div>
-  <div class="row form-group">
-    <div class="col-md-12">
-      <label class="font-weight-bold" for="email">From</label>
-      <input name="from" id="time" type="time" class="form-control" required>
+  <div id='specificstab' class="tab">
+        <h1>Please select the specifics: </h1>
+    <div id='specifics' >
     </div>
   </div>
-  <div class="row form-group">
-    <div class="col-md-12">
-      <label class="font-weight-bold" for="email">To</label>
-      <input name="to" id="time" type="time" class="form-control" required>
+  <div class="tab">
+    <h1>Schedule: </h1>
+
+    <div class="row form-group">
+      <div class="col-md-12 mb-3 mb-md-0">
+        <label class="font-weight-bold" for="fullname">Date</label>
+        <input name="date" id="date" type="date" class="form-control" required>
+      </div>
+    </div>
+    <div class="row form-group">
+      <div class="col-md-12">
+        <label class="font-weight-bold" for="email">From</label>
+        <input name="from" id="time" type="time" class="form-control" required>
+      </div>
+    </div>
+    <div class="row form-group">
+      <div class="col-md-12">
+        <label class="font-weight-bold" for="email">To</label>
+        <input name="to" id="time" type="time" class="form-control" required>
+      </div>
     </div>
   </div>
-</div>
-
-<div class="tab">Login Info:
-  <p><input placeholder="Username..." oninput="this.className = ''"></p>
-  <p><input placeholder="Password..." oninput="this.className = ''"></p>
-</div>
-<br>
-
-<div style="overflow:auto;">
-  <div style="float:right;">
-    <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-    <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+  <div style="overflow:auto;">
+    <div style="float:right;">
+      <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+      <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+    </div>
   </div>
-</div>
 
-<!-- Circles which indicates the steps of the form: -->
-<div style="text-align:center;margin-top:40px;">
-  <span class="step"></span>
-  <span class="step"></span>
-  <span class="step"></span>
-  <span class="step"></span>
-</div>
+  <!-- Circles which indicates the steps of the form: -->
+  <div id="steps" style="text-align:center;margin-top:40px;">
+  </div>
 
 </form> 
-
-<script type="text/javascript" src='/assets/js/steps.js'></script>
