--- a/trabawho/views/modals/request.ejs
+++ b/trabawho/views/modals/request.ejs
@@ -6,13 +6,15 @@
 			<div class="modal-header">
 			</div>
 			<div class="modal-body">
-				
+
 				<div class="row">
 					<%- include('forms/requestform.ejs'); %>
 				</div>
 				
 			</div>
-			<div class="modal-footer"></div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>
 
 		</div>
 	</div>
