--- a/trabawho/views/transaction.ejs
+++ b/trabawho/views/transaction.ejs
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-          <h2 class="text-white h1">HISTORY</h2>
+          <h2 class="text-white h1">Transactions</h2>
         </div>
       </div>
     </div>
@@ -67,64 +67,82 @@
 
   <div class="site-section bg-light">
     <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Service</th>
-                                        <th>Service Provider</th>
-                                        <th>Date</th>
-                                        <th>Time</th>
-                                        <th>Date Requested</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
             </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+              <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Service</th>
+                    <th>Service Provider</th>
+                    <th>Description</th>
+                    <th>Specifics</th>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Date Requested</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% let count = 0  %>
+                  <% data.forEach(function(transaction){ %>
+                  <% count +=1 %>
+                  <tr>
+                    <td><%= count %></td>
+                    <td><%= transaction.service_name %></td>
+                    <td><%= transaction.serviceprovider %></td>
+                    <td><%= transaction.description %></td>
+                    <td><%= transaction.specifics %></td>
+                    <td><%= transaction.date %></td>
+                    <td><%= transaction.time %></td>
+                    <td><%= transaction.date_requested %></td>
+                    <td><%= transaction.status %></td>
+                  </tr>
+                  <% }); %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-<div class="bg-primary" data-aos="fade">
-  <div class="container">
-    <div class="row">
-      <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-facebook text-white"></span></a>
-      <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-twitter text-white"></span></a>
-      <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-instagram text-white"></span></a>
-      <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-linkedin text-white"></span></a>
-      <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-pinterest text-white"></span></a>
-      <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-youtube text-white"></span></a>
+  <div class="bg-primary" data-aos="fade">
+    <div class="container">
+      <div class="row">
+        <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-facebook text-white"></span></a>
+        <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-twitter text-white"></span></a>
+        <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-instagram text-white"></span></a>
+        <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-linkedin text-white"></span></a>
+        <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-pinterest text-white"></span></a>
+        <a href="#" class="col-2 text-center py-4 social-icon d-block"><span class="icon-youtube text-white"></span></a>
+      </div>
     </div>
   </div>
-</div>
 
 
 
-<script src="/assets/js/jquery-3.3.1.min.js"></script>
-<script src="/assets/js/jquery-migrate-3.0.1.min.js"></script>
-<script src="/assets/js/jquery-ui.js"></script>
-<script src="/assets/js/popper.min.js"></script>
-<script src="/assets/js/bootstrap.min.js"></script>
-<script src="/assets/js/owl.carousel.min.js"></script>
-<script src="/assets/js/mediaelement-and-player.min.js"></script>
-<script src="/assets/js/jquery.stellar.min.js"></script>
-<script src="/assets/js/jquery.countdown.min.js"></script>
-<script src="/assets/js/jquery.magnific-popup.min.js"></script>
-<script src="/assets/js/bootstrap-datepicker.min.js"></script>
-<script src="/assets/js/aos.js"></script>
-<script src="/assets/js/circleaudioplayer.js"></script>
+  <script src="/assets/js/jquery-3.3.1.min.js"></script>
+  <script src="/assets/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="/assets/js/jquery-ui.js"></script>
+  <script src="/assets/js/popper.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
+  <script src="/assets/js/owl.carousel.min.js"></script>
+  <script src="/assets/js/mediaelement-and-player.min.js"></script>
+  <script src="/assets/js/jquery.stellar.min.js"></script>
+  <script src="/assets/js/jquery.countdown.min.js"></script>
+  <script src="/assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="/assets/js/bootstrap-datepicker.min.js"></script>
+  <script src="/assets/js/aos.js"></script>
+  <script src="/assets/js/circleaudioplayer.js"></script>
 
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/modal.js"></script>
+  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/modal.js"></script>
 </body>
 </html>
